Code review fixes

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
           >
         </div>
         <div class="hero-image-container">
-          <img src="images/image-profile.png" alt="Elif Altındaş" />
+          <img src="images/image-profile.webp" alt="Elif Altındaş" />
         </div>
       </section>
       <section id="skills" class="skills-container">
@@ -221,7 +221,7 @@
               <div class="project-image-container">
                 <img
                   class="project-scroll-img"
-                  src="images/project-1-tic-tac-toe.png"
+                  src="images/project-1-tic-tac-toe.webp"
                   alt="Tic Tac Toe"
                 />
                 <div class="project-overlay">
@@ -253,7 +253,7 @@
               <div class="project-image-container">
                 <img
                   class="project-scroll-img"
-                  src="images/project-2-pomodoro.png"
+                  src="images/project-2-pomodoro.webp"
                   alt="Pomodoro"
                 />
                 <div class="project-overlay">
@@ -285,7 +285,7 @@
               <div class="project-image-container">
                 <img
                   class="project-scroll-img"
-                  src="images/project-3-frontend-quiz.png"
+                  src="images/project-3-frontend-quiz.webp"
                   alt="Frontend Quiz"
                 />
                 <div class="project-overlay">
@@ -326,7 +326,7 @@
               <div class="project-image-container">
                 <img
                   class="project-scroll-img"
-                  src="images/project-4-space-tourism.png"
+                  src="images/project-4-space-tourism.webp"
                   alt="Space Tourism"
                 />
                 <div class="project-overlay">
@@ -355,7 +355,7 @@
               <div class="project-image-container">
                 <img
                   class="project-scroll-img"
-                  src="images/project-5-time-tracking.png"
+                  src="images/project-5-time-tracking.webp"
                   alt="Time Tracking"
                 />
                 <div class="project-overlay">
@@ -384,7 +384,7 @@
               <div class="project-image-container">
                 <img
                   class="project-scroll-img"
-                  src="images/project-6-ecommerce.png"
+                  src="images/project-6-ecommerce.webp"
                   alt="E-Commerce"
                 />
                 <div class="project-overlay">
@@ -413,7 +413,7 @@
               <div class="project-image-container long-project">
                 <img
                   class="project-scroll-img"
-                  src="images/project-7-galleria.png"
+                  src="images/project-7-galleria.webp"
                   alt="Galleria Slideshow"
                 />
                 <div class="project-overlay">
@@ -442,7 +442,7 @@
               <div class="project-image-container long-project">
                 <img
                   class="project-scroll-img"
-                  src="images/project-8-bookmark-landing.png"
+                  src="images/project-8-bookmark-landing.webp"
                   alt="Bookmark Landing"
                 />
                 <div class="project-overlay">
@@ -471,7 +471,7 @@
               <div class="project-image-container">
                 <img
                   class="project-scroll-img"
-                  src="images/project-9-room-landing.png"
+                  src="images/project-9-room-landing.webp"
                   alt="Room Landing"
                 />
                 <div class="project-overlay">
