Code review fixes

--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
                 Game logic, winning algorithms & turn management.
               </p>
               <div class="project-tags-container">
-                <span class="project-tag">Vanilla JavaScript</span
+                <span class="project-tag">Vanilla JS</span
                 ><span class="project-tag">Game Logic</span>
               </div>
             </div>
@@ -276,7 +276,7 @@
                 Advanced timer logic, audio control & user settings.
               </p>
               <div class="project-tags-container">
-                <span class="project-tag">Vanilla JavaScript</span
+                <span class="project-tag">Vanilla JS</span
                 ><span class="project-tag">Timer API</span>
               </div>
             </div>
@@ -308,7 +308,7 @@
                 Question flow, score tracking & conditional rendering.
               </p>
               <div class="project-tags-container">
-                <span class="project-tag">Vanilla JavaScript</span
+                <span class="project-tag">Vanilla JS</span
                 ><span class="project-tag">DOM Manipulation</span>
               </div>
             </div>
@@ -402,7 +402,7 @@
                   >
                 </div>
               </div>
-              <h3 class="project-title">E-Commerce Product Page</h3>
+              <h3 class="project-title">E-Commerce Page</h3>
               <div class="project-tags-container">
                 <span class="project-tag">Lightbox</span
                 ><span class="project-tag">Cart Logic</span>
@@ -506,9 +506,9 @@
 
           <div class="compact-grid">
             <div class="project-card-container card-compact">
-              <h3 class="project-title-sm">Password Generator</h3>
+              <h3 class="project-title-sm">Pass Generator</h3>
               <p class="project-desc-sm">
-                Generates strong passwords with custom logic.
+                Secure string generation with custom settings.
               </p>
               <div class="project-links-sm">
                 <a
@@ -527,7 +527,9 @@
 
             <div class="project-card-container card-compact">
               <h3 class="project-title-sm">BMI Calculator</h3>
-              <p class="project-desc-sm">Math formulas & unit conversion.</p>
+              <p class="project-desc-sm">
+                Unit conversion logic with mathematical processing.
+              </p>
               <div class="project-links-sm">
                 <a
                   href="https://altindaselif.github.io/20-bmi-calculator/"
@@ -546,7 +548,7 @@
             <div class="project-card-container card-compact">
               <h3 class="project-title-sm">Tip Calculator</h3>
               <p class="project-desc-sm">
-                Real-time calculations with dynamic UI updates.
+                Interactive bill splitting with real-time updates.
               </p>
               <div class="project-links-sm">
                 <a
@@ -565,7 +567,9 @@
 
             <div class="project-card-container card-compact">
               <h3 class="project-title-sm">Contact Form</h3>
-              <p class="project-desc-sm">Regex validation & error handling.</p>
+              <p class="project-desc-sm">
+                Client-side validation with error handling.
+              </p>
               <div class="project-links-sm">
                 <a
                   href="https://altindaselif.github.io/17-contact-form-main/"
