Code review fixes

--- a/index.html
+++ b/index.html
@@ -111,8 +111,8 @@
             I'm <span class="hero-title-accent">Elif Altındaş</span>.
           </h1>
           <p class="hero-desc">
-            Based in Turkey, I'm a front-end developer passionate about building
-            accessible web apps that users love.
+            I combine my engineering background with modern web technologies to
+            build robust, accessible and pixel-perfect applications.
           </p>
           <a class="contact-button" href="mailto:altindaselif@gmail.com"
             >Contact Me</a
